<resources>
    <string name="app_name">Chatter</string>

    <string name="hint_first">First Name</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_weather">Weather</string>
    <string name="title_contact">Contact</string>
    <string name="hint_verification_process_text">Verification Process Text</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="display_header_title">Phish Shows Welcomes:</string>
    <string name="image_description_logo">The Phish Logo</string>
    <string name="write_a_message">Write a message</string>
    <string name="send">Send</string>

    <!-- Chats string values -->
    <string name="chat_list">Chat App</string>
    <string name="chat_add">New Messages</string>
    <string name="hint_chatroom_name">Conversation Name</string>

    <!-- Heroku backend endpoint -->
    <string name="base_url">http://team6-backend.herokuapp.com/</string>

    <!-- ContactCard string values -->
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_phone">Contact Phone</string>
    <string name="text_reset_info">Enter your email and we\'ll send you a link!</string>

    <!-- Reset string values -->
    <string name="text_reset_verify">Reset Password Process</string>
    <string name="button_reset">Reset</string>
    <string name="text_reset">Reset my Password!</string>
    <string name="reset_url">https://team6-backend.herokuapp.com/reset</string>
    <string name="title_reset">Enter your new password</string>

    <!-- Debugging values -->
    <string name="local_host_5000">http://localhost:5000/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
