<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph.xml"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.team6_client.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.team6_client.ui.chat.chatroom.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" >
        <argument
            android:name="chatroom"
            app:argType="edu.uw.tcss450.team6_client.ui.chat.chatlist.ChatRoom" />
    </fragment>
    <fragment
        android:id="@+id/navigation_contact"
        android:name="edu.uw.tcss450.team6_client.ui.contact.ContactListFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact_list" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.team6_client.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" >
        <action
            android:id="@+id/action_navigation_weather_to_navigation_weather_list"
            app:destination="@id/navigation_weather_list" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat_list"
        android:name="edu.uw.tcss450.team6_client.ui.chat.chatlist.ChatListFragment"
        android:label="@string/chat_list" >
        <action
            android:id="@+id/action_navigation_chat_list_to_navigation_chat"
            app:destination="@id/navigation_chat" />
        <action
            android:id="@+id/action_navigation_chat_list_to_chatAddFragment"
            app:destination="@id/navigation_chat_add" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat_add"
        android:name="edu.uw.tcss450.team6_client.ui.chat.chatadd.ChatAddFragment"
        android:label="@string/chat_add"
        tools:layout="@layout/fragment_chat_add" />
    <fragment
        android:id="@+id/navigation_weather_list"
        android:name="edu.uw.tcss450.team6_client.ui.weather.WeatherListFragment"
        android:label="WeatherListFragment" />
    <!--    <fragment-->
<!--        android:id="@+id/navigation_blogs"-->
<!--        android:name="edu.uw.tcss450.phishapp.ui.blog.BlogListFragment"-->
<!--        android:label="@string/title_blogs"-->
<!--        tools:layout="@layout/fragment_blog_list">-->
<!--        <action-->
<!--            android:id="@+id/action_navigation_blogs_to_blogPostFragment"-->
<!--            app:destination="@id/blogPostFragment" />-->
<!--    </fragment>-->
<!--    <fragment-->
<!--        android:id="@+id/blogPostFragment"-->
<!--        android:name="edu.uw.tcss450.phishapp.ui.blog.BlogPostFragment"-->
<!--        android:label="@string/title_blogs" >-->
<!--        <argument-->
<!--            android:name="blog"-->
<!--            app:argType="edu.uw.tcss450.phishapp.ui.blog.BlogPost" />-->
<!--    </fragment>-->
</navigation>